@@ -1,6 +1,6 @@
 
                      Tiny Applications Collection
-                     $Date: 2005/08/13 13:22:26 $
+                     $Date: 2005/08/26 16:13:57 $
 
 Tiny Applications Collection is a set of small programs, shell scripts
 and other  things which may be  usefull in everyday life  ;) There are
@@ -86,6 +86,10 @@ At the moment the collection include:
  * null - a C program (null.c) and a shell script (null.sh) which
    distard standard input.  It is ment for people who thnik that
    '>/dev/null' is too long to type every time :)
+
+ * one-time-pass.sh - another joke.  It works just like passwd with this 
+   difference that it automaticly generates a random password which is not
+   revelad to the user, therefore he don't his own password :)
 
  * quotes.txt - a collection of quotations, some are in Polish.
 
